// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback /> should render correctly when not centered vertically 1`] = `
.c2 {
  margin-bottom: 24px;
  width: 64px;
  height: 64px;
}

.c0 {
  background-color: #FFFFFF;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 16px;
  color: #6B6B78;
}

.c1 {
  width: 100%;
}

.c3 {
  max-width: 100%;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 32px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c6 {
  margin-top: 56px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:769px) {
  .c1 {
    margin: auto;
  }
}

@media (min-width:769px) {
  .c3 {
    max-width: 520px;
  }
}

@media (min-width:769px) {
  .c4 {
    font-size: 48px;
    line-height: 48px;
  }
}

@media (min-width:769px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 40px;
  }
}

<body>
  <div>
    <div
      class="c0"
      display="flex"
      width="100%"
    >
      <div
        class="c1"
      >
        <svg
          class="c2"
          data-testid="feedback-icon"
          fill="#1D856C"
          height="64"
          mb="large"
          width="64"
        />
        <div
          class="c3"
        >
          <p
            class="c4"
          >
            Welcome to Yoga
          </p>
          <p
            class="c5"
            color="deep"
          >
            Enjoy your membership!
          </p>
        </div>
        <div
          class="c6"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`<Feedback /> should render the icon for attention variant 1`] = `
.c0 {
  margin-bottom: 24px;
  width: 64px;
  height: 64px;
}

<svg
  class="c0"
  data-testid="feedback-icon"
  fill="#FF874C"
  height="64"
  mb="large"
  width="64"
/>
`;

exports[`<Feedback /> should render the icon for informative variant 1`] = `
.c0 {
  margin-bottom: 24px;
  width: 64px;
  height: 64px;
}

<svg
  class="c0"
  data-testid="feedback-icon"
  fill="#5340C9"
  height="64"
  mb="large"
  width="64"
/>
`;

exports[`<Feedback /> should render the icon for success variant 1`] = `
.c0 {
  margin-bottom: 24px;
  width: 64px;
  height: 64px;
}

<svg
  class="c0"
  data-testid="feedback-icon"
  fill="#1D856C"
  height="64"
  mb="large"
  width="64"
/>
`;
